--- a/src/Zym/Bundle/MenuBundle/Resources/views/Menus/editMenuItem.html.twig
+++ b/src/Zym/Bundle/MenuBundle/Resources/views/Menus/editMenuItem.html.twig
@@ -10,6 +10,22 @@
         </h1>
     </div>
     
+    <div class="btn-toolbar">
+        <div class="btn-group">
+            <a class="btn" href="javascript: history.back();">
+                <i class="icon-arrow-left"></i>
+                {{ 'Back' | trans({}, 'ZymMenuBundle') }}
+            </a>
+        </div>
+        
+        <div class="btn-group">
+            <a class="btn" href="{{ path('zym_security_acl_object_aces', { 'type': 'Zym\\Bundle\\MenuBundle\\Entity\\MenuItem\\RoutedMenuItem', 'identifier': menuItem.id }) }}">
+                <i class="icon-lock"></i>
+                {{ 'Permissions' | trans({}, 'ZymMenuBundle') }}
+            </a>
+        </div>
+    </div>
+    
     <form action="" method="post" {{ form_enctype(form) }}>
         {{ form_rest(form) }}
         {{ form_row(form.parent, { 'empty_value': '---' }) }}
