--- a/src/Zym/Bundle/NodeBundle/Resources/views/Nodes/add.html.twig
+++ b/src/Zym/Bundle/NodeBundle/Resources/views/Nodes/add.html.twig
@@ -50,7 +50,7 @@
     
         <fieldset class="form-actions">
             <button class="btn btn-primary" type="submit">{{ 'Create' | trans({}, 'ZymNodeBundle') }}</button>
-            <button class="btn" onclick="history.back();">{{ 'Cancel' | trans({}, 'ZymNodeBundle') }}</button>
+            <button class="btn" type="button" onclick="history.back();">{{ 'Cancel' | trans({}, 'ZymNodeBundle') }}</button>
         </fieldset>
     </form>
     {% endif %}
