--- a/src/Zym/Bundle/RuntimeConfigBundle/Resources/views/Parameters/add.html.twig
+++ b/src/Zym/Bundle/RuntimeConfigBundle/Resources/views/Parameters/add.html.twig
@@ -19,7 +19,7 @@
     
         <fieldset class="form-actions">
             <button class="btn btn-primary" type="submit">{{ 'Create' | trans({}, 'ZymRuntimeConfigBundle') }}</button>
-            <button class="btn" onclick="history.back();">{{ 'Cancel' | trans({}, 'ZymRuntimeConfigBundle') }}</button>
+            <button class="btn" type="button" onclick="history.back();">{{ 'Cancel' | trans({}, 'ZymRuntimeConfigBundle') }}</button>
         </fieldset>
     </form>
 {% endblock content %}
