--- a/src/Zym/Bundle/RuntimeConfigBundle/Resources/views/Parameters/delete.html.twig
+++ b/src/Zym/Bundle/RuntimeConfigBundle/Resources/views/Parameters/delete.html.twig
@@ -16,7 +16,7 @@
         
         <fieldset class="form-actions">
             <button class="btn btn-danger" type="submit">{{ 'Confirm Deletion' | trans({}, 'ZymRuntimeConfigBundle') }}</button>
-            <button class="btn" onclick="history.back();">{{ 'Cancel' | trans({}, 'ZymRuntimeConfigBundle') }}</button>
+            <button class="btn" type="button" onclick="history.back();">{{ 'Cancel' | trans({}, 'ZymRuntimeConfigBundle') }}</button>
         </fieldset>
     </form>
 {% endblock content %}
