--- a/src/Zym/Bundle/MenuBundle/Resources/views/Menus/add.html.twig
+++ b/src/Zym/Bundle/MenuBundle/Resources/views/Menus/add.html.twig
@@ -28,7 +28,7 @@
     
         <fieldset class="form-actions">
             <button class="btn btn-primary" type="submit">{{ 'Create' | trans({}, 'ZymMenuBundle') }}</button>
-            <button class="btn" onclick="history.back();">{{ 'Cancel' | trans({}, 'ZymMenuBundle') }}</button>
+            <button class="btn" type="button" onclick="history.back();">{{ 'Cancel' | trans({}, 'ZymMenuBundle') }}</button>
         </fieldset>
     </form>
 {% endblock content %}
