--- a/src/Zym/Bundle/MenuBundle/Resources/views/Menus/editMenuItem.html.twig
+++ b/src/Zym/Bundle/MenuBundle/Resources/views/Menus/editMenuItem.html.twig
@@ -32,7 +32,7 @@
     
         <fieldset class="form-actions">
             <button class="btn btn-primary" type="submit">{{ 'Save changes' | trans({}, 'ZymMenuBundle') }}</button>
-            <button class="btn" onclick="history.back();">{{ 'Cancel' | trans({}, 'ZymMenuBundle') }}</button>
+            <button class="btn" type="button" onclick="history.back();">{{ 'Cancel' | trans({}, 'ZymMenuBundle') }}</button>
         </fieldset>
     </form>
 {% endblock content %}
