--- a/src/Zym/Bundle/NodeBundle/Resources/views/Nodes/delete.html.twig
+++ b/src/Zym/Bundle/NodeBundle/Resources/views/Nodes/delete.html.twig
@@ -21,7 +21,7 @@
         
         <fieldset class="form-actions">
             <button class="btn btn-danger" type="submit">{{ 'Confirm Deletion' | trans({}, 'ZymNodeBundle') }}</button>
-            <button class="btn" onclick="history.back();">{{ 'Cancel' | trans({}, 'ZymNodeBundle') }}</button>
+            <button class="btn" type="button" onclick="history.back();">{{ 'Cancel' | trans({}, 'ZymNodeBundle') }}</button>
         </fieldset>
     </form>
 {% endblock content %}
