--- a/src/Zym/Bundle/RuntimeConfigBundle/Resources/views/Parameters/edit.html.twig
+++ b/src/Zym/Bundle/RuntimeConfigBundle/Resources/views/Parameters/edit.html.twig
@@ -31,7 +31,7 @@
 
         <fieldset class="form-actions">
             <button class="btn btn-primary" type="submit">{{ 'Save changes' | trans({}, 'ZymRuntimeConfigBundle') }}</button>
-            <button class="btn" onclick="history.back();">{{ 'Cancel' | trans({}, 'ZymRuntimeConfigBundle') }}</button>
+            <button class="btn" type="button" onclick="history.back();">{{ 'Cancel' | trans({}, 'ZymRuntimeConfigBundle') }}</button>
         </fieldset>
     </form>
 {% endblock content %}
