--- a/src/Zym/Bundle/SecurityBundle/Resources/views/AclEntries/edit.html.twig
+++ b/src/Zym/Bundle/SecurityBundle/Resources/views/AclEntries/edit.html.twig
@@ -24,7 +24,7 @@
 
         <fieldset class="form-actions">
             <button class="btn btn-primary" type="submit">{{ 'Save changes' | trans({}, 'ZymSecurityBundle') }}</button>
-            <button class="btn" onclick="history.back();">{{ 'Cancel' | trans({}, 'ZymSecurityBundle') }}</button>
+            <button class="btn" type="button" onclick="history.back();">{{ 'Cancel' | trans({}, 'ZymSecurityBundle') }}</button>
         </fieldset>
     </form>
 {% endblock content %}
