--- a/src/Zym/Bundle/SecurityBundle/Resources/views/AclRoles/add.html.twig
+++ b/src/Zym/Bundle/SecurityBundle/Resources/views/AclRoles/add.html.twig
@@ -12,7 +12,7 @@
 
         <fieldset class="form-actions">
             <button class="btn btn-primary" type="submit">{{ 'Create' | trans({}, 'ZymSecurityBundle') }}</button>
-            <button class="btn" onclick="history.back();">{{ 'Cancel' | trans({}, 'ZymSecurityBundle') }}</button>
+            <button class="btn" type="button" onclick="history.back();">{{ 'Cancel' | trans({}, 'ZymSecurityBundle') }}</button>
         </fieldset>
     </form>
 {% endblock content %}
