--- a/src/Zym/Bundle/UserBundle/Resources/views/Groups/add.html.twig
+++ b/src/Zym/Bundle/UserBundle/Resources/views/Groups/add.html.twig
@@ -15,7 +15,7 @@
 
         <fieldset class="form-actions">
             <button class="btn btn-primary" type="submit">{{ 'Create' | trans({}, 'ZymUserBundle') }}</button>
-            <button class="btn" onclick="history.back();">{{ 'Cancel' | trans({}, 'ZymUserBundle') }}</button>
+            <button class="btn" type="button" onclick="history.back();">{{ 'Cancel' | trans({}, 'ZymUserBundle') }}</button>
         </fieldset>
     </form>
 {% endblock content %}
