--- a/src/Zym/Bundle/UserBundle/Resources/views/Groups/edit.html.twig
+++ b/src/Zym/Bundle/UserBundle/Resources/views/Groups/edit.html.twig
@@ -35,7 +35,7 @@
 
         <fieldset class="form-actions">
             <button class="btn btn-primary" type="submit">{{ 'Save changes' | trans({}, 'ZymUserBundle') }}</button>
-            <button class="btn" onclick="history.back();">{{ 'Cancel' | trans({}, 'ZymUserBundle') }}</button>
+            <button class="btn" type="button" onclick="history.back();">{{ 'Cancel' | trans({}, 'ZymUserBundle') }}</button>
          </fieldset>
     </form>
 {% endblock content %}
