--- a/src/Zym/Bundle/UserBundle/Resources/views/Groups/list.html.twig
+++ b/src/Zym/Bundle/UserBundle/Resources/views/Groups/list.html.twig
@@ -19,8 +19,13 @@
             </a>
             {% endif %}
         </div>
+        
         <div class="btn-group">
-            <a class="btn" href="{{ path('zym_security_acl_roles') }}">{{ 'Roles' | trans({}, 'ZymUserBundle') }}</a>
+            <a class="btn" href="{{ path('zym_security_acl_roles') }}">
+                <i class="icon-user"></i>
+
+                {{ 'Roles' | trans({}, 'ZymUserBundle') }}
+            </a>
             <a class="btn dropdown-toggle" data-toggle="dropdown" href="#">
                 <span class="caret"></span>
             </a>
@@ -53,12 +58,14 @@
                 <td>{{ group.roles | join(',<br> ')|raw }}</td>
                 <td>
                     <div class="btn-group">
+                        {#
                         {% if is_granted('VIEW', group) %}
                         <a class="btn" href="{{ path('zym_user_groups_show', { 'id': group.id }) }}">
                             <i class="icon-share"></i>
                             {{ 'View' | trans({}, 'ZymUserBundle') }}
                         </a>
                         {% endif %}
+                        #}
 
                         {% if is_granted('EDIT', group) %}
                         <a class="btn" href="{{ path('zym_user_groups_edit', { 'id': group.id }) }}">
