Security and User mods

--- a/src/Zym/Bundle/UserBundle/Resources/views/Users/create.html.twig
+++ b/src/Zym/Bundle/UserBundle/Resources/views/Users/create.html.twig
@@ -13,8 +13,20 @@
     <form class="form-horizontal" action="" method="post" {{ form_enctype(form) }}>
         <fieldset>
             <legend>{{ 'User Information' | trans({}, 'ZymUserBundle') }}</legend>
+            {% if form.firstName is defined %}
             {{ form_row(form.firstName) }}
+            {{ form_row(form.middleName) }}
             {{ form_row(form.lastName) }}
+            {% endif %}
+            
+            {% if form.has('name') %}
+            {{ form_row(form.get('name')) }}
+            {% endif %}
+            
+            {% if form.has('username') %}            
+            {{ form_row(form.username) }}
+            {% endif %}
+            
             {{ form_row(form.email) }}
             {{ form_row(form.plainPassword) }}
         </fieldset>
