--- a/src/Zym/Bundle/SecurityBundle/Resources/views/AclEntries/list.html.twig
+++ b/src/Zym/Bundle/SecurityBundle/Resources/views/AclEntries/list.html.twig
@@ -11,6 +11,7 @@
     </div>
 
     <div class="btn-toolbar">
+        {#
         <div class="btn-group">
             {% if is_granted('CREATE', ['class', 'Zym\\Bundle\\SecurityBundle\\Entity\\AclClass']) %}
             <a  class="btn" href="{{ path('zym_security_acl_entries_add') }}">
@@ -19,6 +20,7 @@
             </a>
             {% endif %}
         </div>
+        #}
         
         <div class="btn-group">
             <a class="btn" href="{{ path('zym_security_acl_roles') }}">
@@ -46,6 +48,18 @@
     <h3>{{ oid.type }}</h3>
 
     <h4>Class Aces</h4>
+    
+    <div class="btn-toolbar">
+        <div class="btn-group">
+            {% if is_granted('CREATE', ['class', 'Zym\\Bundle\\SecurityBundle\\Entity\\AclClass']) %}
+            <a  class="btn" href="{{ path('zym_security_acl_entries_add', { 'classType': oid.type }) }}">
+                <i class="icon-plus"></i>
+                {{ 'New Permission' | trans({}, 'ZymSecurityBundle') }}
+            </a>
+            {% endif %}
+        </div>
+    </div>
+    
     <table class="table table-striped table-bordered">
         <thead>
             <tr>
