--- a/src/Zym/Bundle/SecurityBundle/Resources/views/AclEntries/delete.ajax.twig
+++ b/src/Zym/Bundle/SecurityBundle/Resources/views/AclEntries/delete.ajax.twig
@@ -1,20 +1,21 @@
 <div class="modal-header">
-	<a href="#" class="close js-dismiss">×</a>
-	<h3>{{ 'Confirm Deletion' |trans({}, 'ZymSecurityBundle') }}</h3>
+    <a href="#" class="close js-dismiss">×</a>
+    <h3>{{ 'Confirm Deletion' |trans({}, 'ZymSecurityBundle') }}</h3>
 </div>
 
 <div class="modal-body">
-	<p>
-		You are about to delete <strong>"{{ role.identifier |e }}"</strong>.
-		This action cannot be undone.<br />
-		<strong>Are you sure you want to proceed?</strong>
-	</p>
+    <p>
+        You are about to delete <strong>"{{  aclClass.type |e }}" - "{{ index |e }}"</strong>.
+        This action cannot be undone.<br />
+        <strong>Are you sure you want to proceed?</strong>
+    </p>
 </div>
 
 <div class="modal-footer">
-	<form action="{{ path('zym_security_acl_entries_delete', { 'classType' : aclClass.type, 'index' : index }) }}" method="post" {{ form_enctype(form) }}>
-		{{ form_rest(form) }}        
-		<input class="btn btn-danger" type="submit" value="{{ 'Confirm Deletion' | trans({}, 'ZymSecurityBundle') }}" />
-		<a class="btn" href="{{ path('zym_security_entries_roles') }}" class="button">{{ 'Cancel' |trans({}, 'ZymSecurityBundle') }}</a>
-	</form>
+    <form action="{{ path('zym_security_acl_entries_delete', { 'classType' : aclClass.type, 'index' : index }) }}" method="post" {{ form_enctype(form) }}>
+        {{ form_rest(form) }}
+
+        <input class="btn btn-danger" type="submit" value="{{ 'Confirm Deletion' | trans({}, 'ZymSecurityBundle') }}" />
+        <a href="#" class="btn" data-dismiss="modal">{{ 'Cancel' | trans({}, 'ZymSecurityBundle') }}</a>
+    </form>
 </div>
