--- a/src/Zym/Bundle/SecurityBundle/Resources/views/AccessRules/add.html.twig
+++ b/src/Zym/Bundle/SecurityBundle/Resources/views/AccessRules/add.html.twig
@@ -7,7 +7,7 @@
         <h1>{{ 'New Access Rule' |trans({}, 'ZymSecurityBundle') }}</h1>
     </div>
 
-    <form class="horizontal-form" action="" method="post" {{ form_enctype(form) }}>
+    <form class="form-horizontal" action="" method="post" {{ form_enctype(form) }}>
         {{ form_rest(form) }}
 
         <fieldset class="form-actions">
