--- a/src/Zym/Bundle/ThemeBundle/Resources/views/ThemeRules/edit.html.twig
+++ b/src/Zym/Bundle/ThemeBundle/Resources/views/ThemeRules/edit.html.twig
@@ -26,7 +26,7 @@
 		</div>
 	</div>
 
-	<form class="horizontal-form" action="" method="post" {{ form_enctype(form) }}>
+	<form class="form-horizontal" action="" method="post" {{ form_enctype(form) }}>
 		{{ form_rest(form) }}
 
 		<fieldset class="form-actions">
