--- a/src/Zym/Bundle/FieldBundle/Resources/views/Fields/list.html.twig
+++ b/src/Zym/Bundle/FieldBundle/Resources/views/Fields/list.html.twig
@@ -78,7 +78,7 @@
         </p>
     {% endif %}
 {#}
-    {{ accessRules.render() |raw }}
+    {{ knp_pagination_render(accessRules) }}
 
 #}
 {% endblock content %}
