--- a/src/Zym/Bundle/NodeBundle/Resources/views/NodeTypes/list.html.twig
+++ b/src/Zym/Bundle/NodeBundle/Resources/views/NodeTypes/list.html.twig
@@ -75,5 +75,5 @@
         </tbody>
     </table>
 
-    {{ nodeTypes.render() |raw }}
+    {{ knp_pagination_render(nodeTypes) }}
 {% endblock content %}
