--- a/src/Zym/Bundle/SecurityBundle/Resources/views/AccessRules/list.html.twig
+++ b/src/Zym/Bundle/SecurityBundle/Resources/views/AccessRules/list.html.twig
@@ -71,7 +71,7 @@
         </p>
     {% endif %}
 
-    {{ accessRules.render() |raw }}
+    {{ knp_pagination_render(accessRules) }}
 
 
 {% endblock content %}
