Form actions so AngularJS doesn't disable submit

--- a/src/Zym/Bundle/MediaBundle/Resources/views/Media/edit.html.twig
+++ b/src/Zym/Bundle/MediaBundle/Resources/views/Media/edit.html.twig
@@ -34,7 +34,7 @@
         </div>
 
         <div class="span6">
-            <form action="" method="post" {{ form_enctype(form) }}>
+            <form action="{{ path('zym_media_edit', { 'id': media.id }) }}" method="post" {{ form_enctype(form) }}>
                 {{ form_rest(form) }}
 
                 <fieldset class="form-actions">
