--- a/src/Zym/Bundle/FieldBundle/Resources/views/Fields/edit.html.twig
+++ b/src/Zym/Bundle/FieldBundle/Resources/views/Fields/edit.html.twig
@@ -27,7 +27,7 @@
     </div>
 
 
-    <form class="form-horizontal" action="" method="post" {{ form_enctype(form) }}>
+    <form class="form-horizontal" action="{{ path('zym_field_field_configs_edit', { 'id': fiedConfig.id }) }}" method="post" {{ form_enctype(form) }}>
         {{ form_rest(form) }}
 
         <fieldset class="form-actions">
