--- a/src/Zym/Bundle/MailBundle/Resources/views/Config/edit.html.twig
+++ b/src/Zym/Bundle/MailBundle/Resources/views/Config/edit.html.twig
@@ -18,7 +18,7 @@
         </div>
     </div>
 
-    <form class="form-horizontal" action="" method="post" {{ form_enctype(form) }}>
+    <form class="form-horizontal" action="{{ path('zym_mail_config_edit') }}" method="post" {{ form_enctype(form) }}>
         {{ form_rest(form) }}
 
         <fieldset class="form-actions">
