--- a/src/Zym/Bundle/MediaBundle/Resources/views/Media/add.html.twig
+++ b/src/Zym/Bundle/MediaBundle/Resources/views/Media/add.html.twig
@@ -19,7 +19,7 @@
         </div>
     </div>
 
-    <form class="form-horizontal" action="" method="post" {{ form_enctype(form) }}>
+    <form class="form-horizontal" action="{{ path('zym_media_add') }}" method="post" {{ form_enctype(form) }}>
         {{ form_rest(form) }}
 
         <fieldset class="form-actions">
