--- a/src/Zym/Bundle/NodeBundle/Resources/views/NodeTypes/edit.html.twig
+++ b/src/Zym/Bundle/NodeBundle/Resources/views/NodeTypes/edit.html.twig
@@ -33,7 +33,7 @@
         </div>
     </div>
 
-    <form class="form-horizontal" action="" method="post" {{ form_enctype(form) }}>
+    <form class="form-horizontal" action="{{ path('zym_node_node_types_edit', { 'type' : nodeType }) }}" method="post" {{ form_enctype(form) }}>
         {{ form_rest(form) }}
 
         <fieldset class="form-actions">
