--- a/src/Zym/Bundle/NodeBundle/Resources/views/Nodes/edit.html.twig
+++ b/src/Zym/Bundle/NodeBundle/Resources/views/Nodes/edit.html.twig
@@ -27,7 +27,7 @@
     </div>
 
 
-    <form class="form-horizontal" action="" method="post" {{ form_enctype(form) }}>
+    <form class="form-horizontal" action="{{ path('zym_nodes_edit', { 'id' : node.id }) }}" method="post" {{ form_enctype(form) }}>
         {{ form_rest(form) }}
 
         <fieldset class="form-actions">
