--- a/src/Zym/Bundle/RuntimeConfigBundle/Resources/views/Parameters/delete.html.twig
+++ b/src/Zym/Bundle/RuntimeConfigBundle/Resources/views/Parameters/delete.html.twig
@@ -11,7 +11,7 @@
         <strong>Are you sure you want to proceed?</strong>
     </p>
 
-    <form action="" method="post" {{ form_enctype(form) }}>
+    <form action="{{ path('zym_runtime_config_parameters_delete', { 'name' : parameter.name }) }}" method="post" {{ form_enctype(form) }}>
         {{ form_rest(form) }}
         
         <fieldset class="form-actions">
