--- a/src/Zym/Bundle/SecurityBundle/Resources/views/AccessRules/edit.html.twig
+++ b/src/Zym/Bundle/SecurityBundle/Resources/views/AccessRules/edit.html.twig
@@ -10,7 +10,7 @@
         </h1>
     </div>
 
-    <form class="form-horizontal" action="" method="post" {{ form_enctype(form) }}>
+    <form class="form-horizontal" action="{{ path('zym_security_access_rules_edit', { 'id' : accessRule.id }) }}" method="post" {{ form_enctype(form) }}>
         {{ form_rest(form) }}
 
         <fieldset class="form-actions">
