--- a/src/Zym/Bundle/SecurityBundle/Resources/views/AclRoles/add.html.twig
+++ b/src/Zym/Bundle/SecurityBundle/Resources/views/AclRoles/add.html.twig
@@ -7,7 +7,7 @@
         <h1>{{ 'New Role' |trans({}, 'ZymSecurityBundle') }}</h1>
     </div>
 
-    <form action="" method="post" {{ form_enctype(form) }}>
+    <form action="{{ path('zym_security_acl_roles_add') }}" method="post" {{ form_enctype(form) }}>
         {{ form_rest(form) }}
 
         <fieldset class="form-actions">
