--- a/src/Zym/Bundle/ThemeBundle/Resources/views/ThemeRules/add.html.twig
+++ b/src/Zym/Bundle/ThemeBundle/Resources/views/ThemeRules/add.html.twig
@@ -16,7 +16,7 @@
 		</div>
 	</div>
 
-	<form class="form-horizontal" action="" method="post" {{ form_enctype(form) }}>
+	<form class="form-horizontal" action="{{ path('zym_theme_theme_rules_add') }}" method="post" {{ form_enctype(form) }}>
 		{{ form_rest(form) }}
 
 		<fieldset class="form-actions">
