--- a/src/Zym/Bundle/UserBundle/Resources/views/Groups/add.html.twig
+++ b/src/Zym/Bundle/UserBundle/Resources/views/Groups/add.html.twig
@@ -10,7 +10,7 @@
         </h1>
     </div>
 
-    <form class="form-horizontal" action="" method="post" {{ form_enctype(form) }}>
+    <form class="form-horizontal" action="{{ path('zym_user_groups_add') }}" method="post" {{ form_enctype(form) }}>
         {{ form_rest(form) }}
 
         <fieldset class="form-actions">
