--- a/src/Zym/Bundle/MenuBundle/Resources/views/Menus/edit.html.twig
+++ b/src/Zym/Bundle/MenuBundle/Resources/views/Menus/edit.html.twig
@@ -26,7 +26,7 @@
         </div>
     </div>
 
-    <form action="{{ path('zym_menus_edit', { 'id': menu.name }) }}" method="post" {{ form_enctype(form) }}>
+    <form class="form-horizontal" action="{{ path('zym_menus_edit', { 'id': menu.name }) }}" method="post" {{ form_enctype(form) }}>
         {{ form_rest(form) }}
 
         <fieldset class="form-actions">
