Twig updates for coding convention

--- a/src/Zym/Bundle/MenuBundle/Resources/views/Menus/add.html.twig
+++ b/src/Zym/Bundle/MenuBundle/Resources/views/Menus/add.html.twig
@@ -31,4 +31,4 @@
             <button class="btn" type="button" onclick="history.back();">{{ 'Cancel' | trans({}, 'ZymMenuBundle') }}</button>
         </fieldset>
     </form>
-{% endblock content %}
+{% endblock %}
