--- a/src/Zym/Bundle/MenuBundle/Resources/views/Menus/deleteMenuItem.html.twig
+++ b/src/Zym/Bundle/MenuBundle/Resources/views/Menus/deleteMenuItem.html.twig
@@ -16,4 +16,4 @@
             <a href="{{ path('zym_menus') }}" class="button">{{ 'Cancel' | trans({}, 'ZymMenuBundle' )}}</a>
         </fieldset>
     </form>
-{% endblock content %}
+{% endblock %}
