--- a/src/Zym/Bundle/MenuBundle/Resources/views/Menus/editMenuItem.html.twig
+++ b/src/Zym/Bundle/MenuBundle/Resources/views/Menus/editMenuItem.html.twig
@@ -35,4 +35,4 @@
             <button class="btn" type="button" onclick="history.back();">{{ 'Cancel' | trans({}, 'ZymMenuBundle') }}</button>
         </fieldset>
     </form>
-{% endblock content %}
+{% endblock %}
