--- a/src/Zym/Bundle/NodeBundle/Resources/views/NodeTypes/delete.html.twig
+++ b/src/Zym/Bundle/NodeBundle/Resources/views/NodeTypes/delete.html.twig
@@ -24,4 +24,4 @@
             <a class="btn" href="{{ path('zym_node_node_types') }}">{{ 'Cancel' | trans({}, 'ZymNodeBundle') }}</a>
         </fieldset>
     </form>
-{% endblock content %}
+{% endblock %}
