--- a/src/Zym/Bundle/NodeBundle/Resources/views/NodeTypes/edit.html.twig
+++ b/src/Zym/Bundle/NodeBundle/Resources/views/NodeTypes/edit.html.twig
@@ -41,4 +41,4 @@
             <button class="btn" type="button" onclick="history.back();">{{ 'Cancel' | trans({}, 'ZymNodeBundle') }}</button>
         </fieldset>
     </form>
-{% endblock content %}
+{% endblock %}
