--- a/src/Zym/Bundle/RouterBundle/Resources/views/Routes/edit.html.twig
+++ b/src/Zym/Bundle/RouterBundle/Resources/views/Routes/edit.html.twig
@@ -34,4 +34,4 @@
             <button class="btn" type="button" onclick="history.back();">{{ 'Cancel' | trans({}, 'ZymRouterBundle') }}</button>
         </fieldset>
     </form>
-{% endblock content %}
+{% endblock %}
