--- a/src/Zym/Bundle/RuntimeConfigBundle/Resources/views/Parameters/delete.html.twig
+++ b/src/Zym/Bundle/RuntimeConfigBundle/Resources/views/Parameters/delete.html.twig
@@ -19,4 +19,4 @@
             <button class="btn" type="button" onclick="history.back();">{{ 'Cancel' | trans({}, 'ZymRuntimeConfigBundle') }}</button>
         </fieldset>
     </form>
-{% endblock content %}
+{% endblock %}
