--- a/src/Zym/Bundle/SecurityBundle/Resources/views/AccessRules/edit.html.twig
+++ b/src/Zym/Bundle/SecurityBundle/Resources/views/AccessRules/edit.html.twig
@@ -18,4 +18,4 @@
             <button class="btn" type="button" onclick="history.back();">{{ 'Cancel' | trans({}, 'ZymSecurityBundle') }}</button>
         </fieldset>
     </form>
-{% endblock content %}
+{% endblock %}
