--- a/src/Zym/Bundle/ThemeBundle/Resources/views/ThemeRules/delete.html.twig
+++ b/src/Zym/Bundle/ThemeBundle/Resources/views/ThemeRules/delete.html.twig
@@ -19,4 +19,4 @@
 			<a class="btn" href="{{ path('zym_theme_theme_rules') }}" class="button">{{ 'Cancel' |trans({}, 'ZymThemeBundle') }}</a>
 		</fieldset>
 	</form>
-{% endblock content %}
+{% endblock %}
