--- a/src/Zym/Bundle/UserBundle/Resources/views/Groups/delete.html.twig
+++ b/src/Zym/Bundle/UserBundle/Resources/views/Groups/delete.html.twig
@@ -24,4 +24,4 @@
             <a class="btn" href="{{ path('zym_user_groups') }}" class="button">{{ 'Cancel' | trans({}, 'ZymUserBundle') }}</a>
         </fieldset>
     </form>
-{% endblock content %}
+{% endblock %}
