--- a/src/Zym/Bundle/UserBundle/Resources/views/Groups/edit.html.twig
+++ b/src/Zym/Bundle/UserBundle/Resources/views/Groups/edit.html.twig
@@ -46,4 +46,4 @@
             <button class="btn" type="button" onclick="history.back();">{{ 'Cancel' | trans({}, 'ZymUserBundle') }}</button>
          </fieldset>
     </form>
-{% endblock content %}
+{% endblock %}
