--- a/src/Zym/Bundle/FieldBundle/Resources/views/Fields/edit.html.twig
+++ b/src/Zym/Bundle/FieldBundle/Resources/views/Fields/edit.html.twig
@@ -35,4 +35,4 @@
             <button class="btn" type="button" onclick="history.back();">{{ 'Cancel' | trans({}, 'ZymFieldBundle') }}</button>
         </fieldset>
     </form>
-{% endblock content %}
+{% endblock %}
