--- a/src/Zym/Bundle/MediaBundle/Resources/views/Media/add.html.twig
+++ b/src/Zym/Bundle/MediaBundle/Resources/views/Media/add.html.twig
@@ -27,4 +27,4 @@
             <button class="btn" type="button" onclick="history.back();">{{ 'Cancel' | trans({}, 'ZymMediaBundle') }}</button>
         </fieldset>
     </form>
-{% endblock content %}
+{% endblock %}
