--- a/src/Zym/Bundle/MediaBundle/Resources/views/Media/delete.html.twig
+++ b/src/Zym/Bundle/MediaBundle/Resources/views/Media/delete.html.twig
@@ -19,4 +19,4 @@
             <a class="btn" href="{{ path('zym_media') }}">{{ 'Cancel' | trans({}, 'ZymMediaBundle') }}</a>
         </fieldset>
     </form>
-{% endblock content %}
+{% endblock %}
