--- a/src/Zym/Bundle/MenuBundle/Resources/views/Menus/delete.html.twig
+++ b/src/Zym/Bundle/MenuBundle/Resources/views/Menus/delete.html.twig
@@ -19,4 +19,4 @@
             <a class="btn" href="{{ path('zym_menus') }}">{{ 'Cancel' | trans({}, 'ZymMenuBundle') }}</a>
         </fieldset>
     </form>
-{% endblock content %}
+{% endblock %}
