--- a/src/Zym/Bundle/NodeBundle/Resources/views/Nodes/delete.html.twig
+++ b/src/Zym/Bundle/NodeBundle/Resources/views/Nodes/delete.html.twig
@@ -24,4 +24,4 @@
             <button class="btn" type="button" onclick="history.back();">{{ 'Cancel' | trans({}, 'ZymNodeBundle') }}</button>
         </fieldset>
     </form>
-{% endblock content %}
+{% endblock %}
