--- a/src/Zym/Bundle/SecurityBundle/Resources/views/AccessRules/delete.html.twig
+++ b/src/Zym/Bundle/SecurityBundle/Resources/views/AccessRules/delete.html.twig
@@ -19,4 +19,4 @@
             <a class="btn" href="{{ path('zym_security_access_rules') }}" class="button">{{ 'Cancel' |trans({}, 'ZymSecurityBundle') }}</a>
         </fieldset>
     </form>
-{% endblock content %}
+{% endblock %}
