--- a/src/Zym/Bundle/SecurityBundle/Resources/views/AclEntries/edit.html.twig
+++ b/src/Zym/Bundle/SecurityBundle/Resources/views/AclEntries/edit.html.twig
@@ -27,4 +27,4 @@
             <button class="btn" type="button" onclick="history.back();">{{ 'Cancel' | trans({}, 'ZymSecurityBundle') }}</button>
         </fieldset>
     </form>
-{% endblock content %}
+{% endblock %}
