--- a/src/Zym/Bundle/SecurityBundle/Resources/views/AclRoles/add.html.twig
+++ b/src/Zym/Bundle/SecurityBundle/Resources/views/AclRoles/add.html.twig
@@ -15,4 +15,4 @@
             <button class="btn" type="button" onclick="history.back();">{{ 'Cancel' | trans({}, 'ZymSecurityBundle') }}</button>
         </fieldset>
     </form>
-{% endblock content %}
+{% endblock %}
