--- a/src/Zym/Bundle/SecurityBundle/Resources/views/AclRoles/delete.html.twig
+++ b/src/Zym/Bundle/SecurityBundle/Resources/views/AclRoles/delete.html.twig
@@ -19,4 +19,4 @@
             <a class="btn" href="{{ path('zym_security_acl_roles') }}" class="button">{{ 'Cancel' |trans({}, 'ZymSecurityBundle') }}</a>
         </fieldset>
     </form>
-{% endblock content %}
+{% endblock %}
