--- a/src/Zym/Bundle/ThemeBundle/Resources/views/ThemeRules/add.html.twig
+++ b/src/Zym/Bundle/ThemeBundle/Resources/views/ThemeRules/add.html.twig
@@ -24,4 +24,4 @@
 			<button class="btn" type="button" onclick="history.back();">{{ 'Cancel' | trans({}, 'ZymThemeBundle') }}</button>
 		</fieldset>
 	</form>
-{% endblock content %}
+{% endblock %}
