--- a/src/Zym/Bundle/UserBundle/Resources/views/Groups/add.html.twig
+++ b/src/Zym/Bundle/UserBundle/Resources/views/Groups/add.html.twig
@@ -18,4 +18,4 @@
             <button class="btn" type="button" onclick="history.back();">{{ 'Cancel' | trans({}, 'ZymUserBundle') }}</button>
         </fieldset>
     </form>
-{% endblock content %}
+{% endblock %}
