--- a/src/Zym/Bundle/UserBundle/Resources/views/Users/add.html.twig
+++ b/src/Zym/Bundle/UserBundle/Resources/views/Users/add.html.twig
@@ -48,4 +48,4 @@
             <button class="btn" type="button" onclick="history.back();">{{ 'Cancel' | trans({}, 'ZymUserBundle') }}</button>
         </fieldset>
     </form>
-{% endblock content %}
+{% endblock %}
